Fixed Nav
Ordered list adjustment for article messed up nav

--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -8,7 +8,7 @@ styles: true
 html {
   font-family: 'IBM Plex Mono', monospace
 }
-li { margin-left: 8% !important;}
+article li { margin-left: 8% !important;}
 a img {transition: opacity ease-in-out 0.5s; margin-top: 8%;}
 a img:hover {
   opacity: 55%;
